--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Bild mit Meme Caption -->
   <section class="mt-16 px-4">
     <div class="max-w-xl mx-auto">
-      <img src="https://source.unsplash.com/800x500/?walrus,cold" alt="Blue Zeiros" class="rounded-xl shadow-xl border-4 border-white">
+      <img src="./walrus-3433733_1280.jpg" alt="Blue Zeiros" class="rounded-xl shadow-xl border-4 border-white">
       <p class="mt-4 text-center text-xl font-semibold italic">„Ich bin nicht dick, ich bin majestätisch.“ – Blue Zeiros</p>
     </div>
   </section>
